--- a/index.htm
+++ b/index.htm
@@ -150,7 +150,7 @@
                           <span ><h3>Connections 2045 - Major Regional Projects</h3></span>
                             <div class="col-12 content">
                                 <p>  The Connections 2045 Plan includes a Vision Plan of desired transportation investments. Federal requirements mandate that the Long-Range Plan be fiscally constrained and only include projects that can be funded with reasonably anticipated revenue sources. Due to the gap between future needs and anticipated funding, not all identified projects in the Vision Plan are able to be included in the fiscally constrained financial plan.
-                                  <div class="col-12 content"><img style="width:100%;margin:0px 0px 10px 0px" src="lib/images/needs.jpg"/></div> 
+                                  <div class="col-12 content"><img style="width:100%;margin:0px 0px 10px 0px" src="lib/images/needs.png"/></div> 
 
                                 The financial plan allocates revenue to different categories, and there are separate budgets for the Pennsylvania and New Jersey portions of the DVRPC region. These categories serve as placeholders for funding projects over the life of the Plan.</p>
                         <div class="col-md-6" style="margin-top: 15px;">
