--- a/index.htm
+++ b/index.htm
@@ -434,13 +434,11 @@
                               </div>
                               <div class="col-sm-9 content" id="legend">  
                             <span2 id="legend-icon" style="background-color: #24527F"></span2>&nbsp;&nbsp;Roadway Funded<br>
-                            <span2 id="legend-icon" style="background-color: #24527F"></span2>&nbsp;&nbsp;Roadway UnFunded<br>
-                            <span2 id="legend-icon" style="background-color: #24527F"></span2><span>&nbsp;&nbsp;Transit Funded</span><br>
-                            <span2 id="legend-icon" style="background-color: #24527F"></span2><span>&nbsp;&nbsp;Transit Unfunded</span><br>
-                            <span2 id="legend-icon" style="background-color: #24527F"></span2><span>&nbsp;&nbsp;Externally Funded</span><br>
-                            <span2 id="legend-icon" style="background-color: #24527F"></span2><span>&nbsp;&nbsp;Externally Unfunded</span>
-
-
+                            <span2 id="legend-icon" style="background-color: #90ABD9 "></span2>&nbsp;&nbsp;Roadway UnFunded<br>
+                            <span2 id="legend-icon" style="background-color: #69883A "></span2><span>&nbsp;&nbsp;Transit Funded</span><br>
+                            <span2 id="legend-icon" style="background-color: #B4CA8B "></span2><span>&nbsp;&nbsp;Transit Unfunded</span><br>
+                            <span2 id="legend-icon" style="background-color: #795300 "></span2><span>&nbsp;&nbsp;Externally Funded</span><br>
+                            <span2 id="legend-icon" style="background-color: #a1864c"></span2><span>&nbsp;&nbsp;Externally Unfunded</span>
                               </div> 
                               <div class="col-sm-2 content">
                                    
