--- a/index.htm
+++ b/index.htm
@@ -178,7 +178,7 @@
                             <div class="col-md-8" style="float:right;margin-top:-12px;">
                             <div class="hp-tool-links">
                                <img src="lib/images/MRP_logo2.png" style="float:right;width:120px;">
-                            <p>Submit comments on the <br>Draft <i>Connections 2045 Long-Range Plan</i> here:<br>
+                            <p>Submit comments on the Draft<br> <i>Connections 2045 Long-Range Plan</i> here:<br>
                             <a href="http://www.dvrpc.org/Connections2045/" target="_new">http://www.dvrpc.org/Connections2045/</a>
                             </p>
                             </div>
@@ -322,10 +322,10 @@
                         </div> 
                         <div class="col-md-6 col-lg-6 content">
                             <div class="row" id="submit">
-                                <div class="col-md-12" style="float:right;margin-top:-12px;margin-bottom: 20px;">
+                                <div class="col-md-12" style="float:right;margin-top:-35px;margin-bottom: 20px;">
                                 <div class="hp-tool-links">
                                    <img src="lib/images/MRP_logo2.png" style="float:right;width:120px;">
-                                <p>Submit comments on the <br>Draft <i>Connections 2045 Long-Range Plan</i> here:<br>
+                                <p>Submit comments on the Draft<br> <i>Connections 2045 Long-Range Plan</i> here:<br>
                                 <a href="http://www.dvrpc.org/Connections2045/" target="_new">http://www.dvrpc.org/Connections2045/</a>
                                 </p>
                                 </div>
