final draft updates
final draft updates

--- a/index.htm
+++ b/index.htm
@@ -166,7 +166,7 @@
                                  <a href="#page2" data-toggle="tab" ><i class="glyphicon glyphicon-list-alt" style="font-size:300%;color:#008d92;float:left;margin:30px 15px 0px 0px;"></i></a>
 
                                 <div class="hp-tool-links-text"><a href="#page2" data-toggle="tab" ><h5>VIEW TABLE</h5></a>
-                                <p><a href="#page2">Search the full list of major regional projects.</a></p>
+                                <p><a href="#page2">Search the full list of major regional projects</a></p>
                                </div>
                             </div>
                         </div>
@@ -179,7 +179,7 @@
                             <div class="hp-tool-links" style="text-align:left;">
                                <img src="lib/images/MRP_logo2.png" style="float:right;width:120px;">
                             <p>Submit comments on the Draft<br> <i>Connections 2045 Long-Range Plan</i> here:<br>
-                            <a href="http://www.dvrpc.org/Connections2045/" target="_new">http://www.dvrpc.org/Connections2045/</a>
+                            <a href="http://www.dvrpc.org/Connections2045/#comments" target="_new">http://www.dvrpc.org/Connections2045/</a>
                             </p>
                             </div>
                             </div>
@@ -326,7 +326,7 @@
                                 <div class="hp-tool-links" style="text-align:left;">
                                    <img src="lib/images/MRP_logo2.png" style="float:right;width:120px;">
                                 <p>Submit comments on the Draft<br> <i>Connections 2045 Long-Range Plan</i> here:<br>
-                                <a href="http://www.dvrpc.org/Connections2045/" target="_new">http://www.dvrpc.org/Connections2045/</a>
+                                <a href="http://www.dvrpc.org/Connections2045/#comments" target="_new">http://www.dvrpc.org/Connections2045/</a>
                                 </p>
                                 </div>
                                 </div>
@@ -357,12 +357,12 @@
                             <div class="hp-tool-links">
                             <img src="lib/images/MRP_logo2.png" style="float:right;width:90px;">
                             <p style="text-align: left;font-size:small;">Submit comments on the Draft <br><i>Connections 2045 Long-Range Plan</i> here:<br>
-                            <a href="http://www.dvrpc.org/Connections2045/" target="_new">http://www.dvrpc.org/Connections2045/</a>
+                            <a href="http://www.dvrpc.org/Connections2045/#comments" target="_new">http://www.dvrpc.org/Connections2045/</a>
                             </p>
                             </div>
                     </div>
                          <h2>Major Regional Projects</h2>
-                         <p>This table shows how revenue is allocated to different funding categories for both roadway and transit projects.<br> Illustrative projects represent projects that regional staekholders have identified and have been carried over from 2040.</p> 
+                         <p>This table shows how revenue is allocated to different funding categories for both roadway and transit projects.<br>Illustrative classification represents preservation projects that need to occur over the next 25 years, but have not yet moved into the TIP.</p> 
                          <div class="col-md-12">
                          <table id="MRPtable" class="compact" width="100%"></table>
                         </div>
@@ -379,7 +379,7 @@
                             <div class="hp-tool-links">
                             <img src="lib/images/MRP_logo2.png" style="float:right;width:90px;">
                             <p style="text-align: left;font-size:small;">Submit comments on the Draft <br><i>Connections 2045 Long-Range Plan</i> here:<br>
-                            <a href="http://www.dvrpc.org/Connections2045/" target="_new">http://www.dvrpc.org/Connections2045/</a>
+                            <a href="http://www.dvrpc.org/Connections2045/#comments" target="_new">http://www.dvrpc.org/Connections2045/</a>
                             </p>
                             </div>
                     </div>
@@ -506,7 +506,7 @@
                 <!-- Landing Footer -->
                 <div id="LandingFooter" class="center landingUI" style="color:#fff;">
                    <!--	<p>DRAFT Connections 2045 - Major Regional Projects  | Draft 2017</p> -->
-                   <p>Submit comments on the Draft Connections 2045 Long-Range Plan here: <a style="color:white !important;" href="http://www.dvrpc.org/Connections2045/" target="_new">http://www.dvrpc.org/Connections2045/</a>
+                   <p>Submit comments on the Draft Connections 2045 Long-Range Plan here: <a style="color:white !important;" href="http://www.dvrpc.org/Connections2045/#comments" target="_new">http://www.dvrpc.org/Connections2045/</a>
 
                 </div>            
             </div>
@@ -680,6 +680,11 @@
         <script type="text/javascript" src="lib/map.js"></script><!--customized mapping functions to load data -->
         <script type="text/javascript" src="lib/table.js"></script><!--customized mapping functions to load data --> 
         <script type="text/javascript" src="lib/core/core.js"></script><!--core application functions -->
+        
+        <script>
+            var _gaq=[['_setAccount','UA-9825778-1'],['_trackPageview']];
+        </script> 
+        <script async src="//www.google-analytics.com/ga.js"></script>
         
     </body>
 </html>
