--- a/index.htm
+++ b/index.htm
@@ -118,8 +118,8 @@
                     <span class="icon-bar"></span>
                 </button>
             <div class="navbar-brand">
-                <div class="logo-container"><a href="http://www.dvrpc.org" target="_new"><img src="lib/images/dvrpc_logo_small.png" style="margin-left:3px;"/></a></div>
-                <div class="logo-container" style="margin-right: 10px;"><a href="http://www.dvrpc.org/Connections2045/" target="_new"><img src="lib/images/MRP_logo.png"/></a></div>
+                <div class="logo-container"><a href="http://www.dvrpc.org" target="_new"><img src="lib/images/dvrpc_logo_small.png" style="margin-left:3px;" id="dvrpc-logo"/></a></div>
+                <div class="logo-container" style="margin-right: 10px;" id="mrp2045-logo"><a href="http://www.dvrpc.org/Connections2045/" target="_new"><img id="mrp2045-logo" src="lib/images/MRP_logo.png"/></a></div>
             </div>
         </div>
         <div id="navbar-links" class="navbar-collapse collapse">
@@ -460,7 +460,7 @@
                               </div>
                               <div class="col-sm-9 content" id="legend">  
                             <span2 id="legend-icon" style="background-color: #24527F"></span2>&nbsp;&nbsp;Roadway Funded<br>
-                            <span2 id="legend-icon" style="background-color: #90ABD9 "></span2>&nbsp;&nbsp;Roadway UnFunded<br>
+                            <span2 id="legend-icon" style="background-color: #90ABD9 "></span2>&nbsp;&nbsp;Roadway Unfunded<br>
                             <span2 id="legend-icon" style="background-color: #69883A "></span2><span>&nbsp;&nbsp;Transit Funded</span><br>
                             <span2 id="legend-icon" style="background-color: #B4CA8B "></span2><span>&nbsp;&nbsp;Transit Unfunded</span><br>
                             <span2 id="legend-icon" style="background-color: #795300 "></span2><span>&nbsp;&nbsp;Externally Funded</span><br>
