--- a/index.htm
+++ b/index.htm
@@ -8,8 +8,8 @@
         <meta name="description" content="version 1.0.0">
         <meta name="author" content="DVRPC">     
         <title>DVRPC - DRAFT Connections 2045 Major Regional Projects</title>
-        <link href="http://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" rel="stylesheet" type="text/css">
+        <link href="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css" rel="stylesheet" type="text/css">
 
         <link href="lib/assets/typeahead.min.css" rel="stylesheet" type="text/css">
         <!-- Load Leaflet from CDN-->
@@ -118,8 +118,8 @@
                     <span class="icon-bar"></span>
                 </button>
             <div class="navbar-brand">
-                <div class="logo-container"><a href="http://www.dvrpc.org" target="_new"><img src="lib/images/dvrpc_logo_small.png" style="margin-left:3px;" id="dvrpc-logo"/></a></div>
-                <div class="logo-container" style="margin-right: 10px;" id="mrp2045-logo"><a href="http://www.dvrpc.org/Connections2045/" target="_new"><img id="mrp2045-logo" src="lib/images/MRP_logo.png"/></a></div>
+                <div class="logo-container"><a href="//www.dvrpc.org" target="_new"><img src="lib/images/dvrpc_logo_small.png" style="margin-left:3px;" id="dvrpc-logo"/></a></div>
+                <div class="logo-container" style="margin-right: 10px;" id="mrp2045-logo"><a href="//www.dvrpc.org/Connections2045/" target="_new"><img id="mrp2045-logo" src="lib/images/MRP_logo.png"/></a></div>
             </div>
         </div>
         <div id="navbar-links" class="navbar-collapse collapse">
@@ -149,7 +149,7 @@
                         <div class="col-md-5">
                           <span ><h3>DRAFT <i>Connections 2045 Plan</i></h3><h5>Major Regional Projects</h5></span>
                             <div class="col-12 content">
-                                <p>The <i>Connections 2045 Plan</i> conducts a robust needs assessment for maintaining all existing road, bridge, and transit infrastructure. It also includes desired transportation investments to improve operational efficiency of existing facilities and to expand roadway, transit, bike, and pedestrian infrastructure. The sum of these needs is also known as the region's Vision Plan.
+                                <p>The <i>Connections 2045 Plan</i> conducts a robust needs assessment for maintaining all existing road, bridge, and transit infrastructure. It also includes desired transportation investments to improve operational efficiency of existing facilities, and to expand roadway, transit, and bike and pedestrian infrastructure. The sum of all these needs is also know as the region's Vision Plan.
                                 <div class="col-12 content"><img style="width:100%;margin:0px 0px 10px 0px" src="lib/images/needs.png"/></div> 
 
                                Federal requirements mandate that the Long-Range Plan be fiscally constrained and only include projects that can be funded with reasonably anticipated revenue sources. Due to the gap between future needs and anticipated funding, not all identified projects in the Vision Plan are able to be included in the fiscally constrained financial plan. The financial plan allocates revenue to different categories, and there are separate budgets for the Pennsylvania and New Jersey portions of the DVRPC region. These categories serve as placeholders for funding projects over the life of the Plan.</p>
@@ -176,15 +176,15 @@
                         <!-- Start Table DIV -->
                         <div class="row" id="submit">
                             <div class="col-md-8" style="float:right;margin-top:-12px;">
-                            <div class="hp-tool-links" style="text-align:left;">
+                            <div class="hp-tool-links clearfix" style="text-align:left;">
                                <img src="lib/images/MRP_logo2.png" style="float:right;width:120px;">
-                            <p>Submit comments on the Draft<br> <i>Connections 2045 Long-Range Plan</i> here:<br>
-                            <a href="http://www.dvrpc.org/Connections2045/#comments" target="_new">http://www.dvrpc.org/Connections2045/</a>
+                            <p>
+                            <a href="//www.dvrpc.org/Connections2045/#comments" target="_blank">Submit comments on the Draft<br> <i>Connections 2045 Long-Range Plan</i></a>
                             </p>
                             </div>
                             </div>
                         </div>
-                        <!-- http://www.tablesgenerator.com/html_tables/load# -->
+                        <!-- https://www.tablesgenerator.com/html_tables/load# -->
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
 .tg td{font-family:Arial, sans-serif;font-size:13px;padding:5px 15px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
@@ -325,8 +325,7 @@
                                 <div class="col-md-12" style="float:right;margin-top:-35px;margin-bottom: 20px;">
                                 <div class="hp-tool-links" style="text-align:left;">
                                    <img src="lib/images/MRP_logo2.png" style="float:right;width:120px;">
-                                <p>Submit comments on the Draft<br> <i>Connections 2045 Long-Range Plan</i> here:<br>
-                                <a href="http://www.dvrpc.org/Connections2045/#comments" target="_new">http://www.dvrpc.org/Connections2045/</a>
+                                <p><a href="//www.dvrpc.org/Connections2045/#comments" target="_blank">Submit comments on the Draft<br> <i>Connections 2045 Long-Range Plan</i></a>
                                 </p>
                                 </div>
                                 </div>
@@ -354,12 +353,11 @@
                 <div id="page2" class="tab-pane fade in landing-content" style="color:#333333;">
                    <div class="center-block col-md-12 ">
                       <div class="col-md-4" style="float:right;margin-top:12px;">
-                            <div class="hp-tool-links">
-                            <img src="lib/images/MRP_logo2.png" style="float:right;width:90px;">
-                            <p style="text-align: left;font-size:small;">Submit comments on the Draft <br><i>Connections 2045 Long-Range Plan</i> here:<br>
-                            <a href="http://www.dvrpc.org/Connections2045/#comments" target="_new">http://www.dvrpc.org/Connections2045/</a>
-                            </p>
-                            </div>
+                            <div class="hp-tool-links" style="text-align:left;">
+                                   <img src="lib/images/MRP_logo2.png" style="float:right;width:120px;">
+                                <p><a href="//www.dvrpc.org/Connections2045/#comments" target="_blank">Submit comments on the Draft<br> <i>Connections 2045 Long-Range Plan</i></a>
+                                </p>
+                                </div>
                     </div>
                          <h2>Major Regional Projects</h2>
                          <p>This table shows how revenue is allocated to different funding categories for both roadway and transit projects.<br>Illustrative classification represents preservation projects that need to occur over the next 25 years, but have not yet moved into the TIP.</p> 
@@ -376,12 +374,11 @@
 				
                 <div class="tab-content" style="padding-top: 10px;">
                           <div class="row" style="margin: -12px 0px 5px 0px;">
-                            <div class="hp-tool-links">
-                            <img src="lib/images/MRP_logo2.png" style="float:right;width:90px;">
-                            <p style="text-align: left;font-size:small;">Submit comments on the Draft <br><i>Connections 2045 Long-Range Plan</i> here:<br>
-                            <a href="http://www.dvrpc.org/Connections2045/#comments" target="_new">http://www.dvrpc.org/Connections2045/</a>
-                            </p>
-                            </div>
+                            <div class="hp-tool-links" style="text-align:left;">
+                                   <img src="lib/images/MRP_logo2.png" style="float:right;width:120px;">
+                                <p><a href="//www.dvrpc.org/Connections2045/#comments" target="_blank">Submit comments on the Draft<br> <i>Connections 2045 Long-Range Plan</i></a>
+                                </p>
+                                </div>
                     </div>
 
                         <!--ADD LAYER CONTROL GROUPS HERE -->
@@ -506,8 +503,8 @@
                 <!-- Landing Footer -->
                 <div id="LandingFooter" class="center landingUI" style="color:#fff;">
                    <!--	<p>DRAFT Connections 2045 - Major Regional Projects  | Draft 2017</p> -->
-                   <p>Submit comments on the Draft Connections 2045 Long-Range Plan here: <a style="color:white !important;" href="http://www.dvrpc.org/Connections2045/#comments" target="_new">http://www.dvrpc.org/Connections2045/</a>
-
+                   <p><a style="color:white !important;" href="//www.dvrpc.org/Connections2045/#comments" target="_blank">Submit comments on the Draft <i>Connections 2045</i> Long-Range Plan</a>
+                   </p>
                 </div>            
             </div>
         </div>  
@@ -664,11 +661,11 @@
             </div><!-- /.modal-dialog -->
     </div> 
 
-        <script type="text/javascript" src="data/mrp2045F.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
 
-        <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
-        <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
+        <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
         
         <script type="text/javascript" src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
 
