--- a/index.htm
+++ b/index.htm
@@ -182,16 +182,16 @@
     .tg .tg-pi3k{font-weight:bold;background-color:#69883a;color:#ffffff;text-align:right}
     .tg .tg-lut6{font-weight:bold;color:#24527f;vertical-align:top}
     .tg .tg-lqy6{text-align:right;vertical-align:top}
-    .tg .tg-3ojx{font-weight:bold;background-color:#333333;color:#ffffff;vertical-align:top}
-    .tg .tg-yf2n{font-weight:bold;background-color:#333333;color:#ffffff;text-align:center;vertical-align:top}
-    .tg .tg-qjik{font-weight:bold;background-color:#333333;color:#ffffff}
+    .tg .tg-3ojx{font-weight:bold;background-color:#4a4b4d;color:#ffffff;vertical-align:top}
+    .tg .tg-yf2n{font-weight:bold;background-color:#4a4b4d;color:#ffffff;text-align:center;vertical-align:top}
+    .tg .tg-qjik{font-weight:bold;background-color:#4a4b4d;color:#ffffff}
     .tg .tg-yw4l{vertical-align:top;text-align: left}
     .tg .tg-9hbo{font-weight:bold;vertical-align:top;text-align:left;}
     .tg .tg-yita{font-weight:bold;background-color:#24527f;color:#ffffff;text-align:left;}
     .tg .tg-sg9c{font-weight:bold;color:#69883a}
     .tg .tg-ef4r{font-weight:bold;background-color:#69883a;color:#ffffff;text-align:left;}
-    .tg .tg-47zg{font-weight:bold;background-color:#000000;color:#ffffff;text-align:left;}
-    .tg .tg-l65r{font-weight:bold;background-color:#000000;color:#ffffff;text-align:right}
+    .tg .tg-47zg{font-weight:bold;background-color:#4a4b4d;color:#ffffff;text-align:left;}
+    .tg .tg-l65r{font-weight:bold;background-color:#4a4b4d;color:#ffffff;text-align:right}
     @media screen and (max-width: 767px) {.tg {width: auto !important;}.tg col {width: auto !important;}.tg-wrap {overflow-x: auto;-webkit-overflow-scrolling: touch;}}</style>
     <div class="tg-wrap"><table class="tg">
     <h5>Funding Allocation to Project Categories</h5>
