--- a/index.htm
+++ b/index.htm
@@ -123,7 +123,7 @@
             </div>
         </div>
         <div id="navbar-links" class="navbar-collapse collapse">
-            <div id="nav_search" class="navbar-form navbar-right mapUI" style="display:none;">
+            <div id="nav_search" class="navbar-form navbar-right" style="display:none;">
                     <div class="input-group search-container">
                         <input id="searchbox" type="text" class="form-control" placeholder="Search">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
