--- a/index.htm
+++ b/index.htm
@@ -178,18 +178,18 @@
     .tg td{font-family:Arial, sans-serif;font-size:13px;padding:5px 15px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
     .tg th{font-family:Arial, sans-serif;font-size:13px;font-weight:normal;padding:5px 15px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
     .tg .tg-0ord{text-align:right}
-    .tg .tg-c6ub{font-weight:bold;background-color:#006ba6;color:#ffffff;text-align:right}
-    .tg .tg-pi3k{font-weight:bold;background-color:#7a9c3e;color:#ffffff;text-align:right}
-    .tg .tg-lut6{font-weight:bold;color:#006ba6;vertical-align:top}
-    .tg .tg-lqy6{text-align:right;vertical-align:top}
-    .tg .tg-3ojx{font-weight:bold;background-color:#4a4b4d;color:#ffffff;vertical-align:top}
-    .tg .tg-yf2n{font-weight:bold;background-color:#4a4b4d;color:#ffffff;text-align:center;vertical-align:top}
-    .tg .tg-qjik{font-weight:bold;background-color:#4a4b4d;color:#ffffff}
+    .tg .tg-c6ub{font-weight:bold;background-color:#dd6e1d; color:#ffffff; text-align:right}
+    .tg .tg-pi3k{font-weight:bold;background-color:#008c91; color:#ffffff; text-align:right}
+    .tg .tg-lut6{font-weight:bold; vertical-align:top}
+    .tg .tg-lqy6{text-align:right; vertical-align:top}
+    .tg .tg-3ojx{font-weight:bold; background-color:#4a4b4d; color:#ffffff; vertical-align:top}
+    .tg .tg-yf2n{font-weight:bold; background-color:#4a4b4d; color:#ffffff; text-align:center;vertical-align:top}
+    .tg .tg-qjik{font-weight:bold; background-color:#4a4b4d; color:#ffffff}
     .tg .tg-yw4l{vertical-align:top;text-align: left}
     .tg .tg-9hbo{font-weight:bold;vertical-align:top;text-align:left;}
-    .tg .tg-yita{font-weight:bold;background-color:#006ba6;color:#ffffff;text-align:left;}
-    .tg .tg-sg9c{font-weight:bold;color:#7a9c3e}
-    .tg .tg-ef4r{font-weight:bold;background-color:#7a9c3e;color:#ffffff;text-align:left;}
+    .tg .tg-yita{font-weight:bold;background-color:#dd6e1d;color:#ffffff;text-align:left;}
+    .tg .tg-sg9c{font-weight:bold;}
+    .tg .tg-ef4r{font-weight:bold;background-color:#008c91;color:#ffffff;text-align:left;}
     .tg .tg-47zg{font-weight:bold;background-color:#4a4b4d;color:#ffffff;text-align:left;}
     .tg .tg-l65r{font-weight:bold;background-color:#4a4b4d;color:#ffffff;text-align:right}
     @media screen and (max-width: 767px) {.tg {width: auto !important;}.tg col {width: auto !important;}.tg-wrap {overflow-x: auto;-webkit-overflow-scrolling: touch;}}</style>
