Added policies link
Added policies link to footer

--- a/index.htm
+++ b/index.htm
@@ -468,7 +468,7 @@
                 </div>
                 <!-- Landing Footer -->
                 <div id="LandingFooter" class="center landingUI" style="color:#fff;">
-                   <p>Connections 2045 - Major Regional Projects  | 2017</p>
+                   <p>Connections 2045 - Major Regional Projects  | 2018 |<a href="https://www.dvrpc.org/policies/" target="_new" style="color: #fff !important"> Policies</p>
                 </div>            
             </div>
         </div>  
