--- a/index.htm
+++ b/index.htm
@@ -195,7 +195,7 @@
     @media screen and (max-width: 767px) {.tg {width: auto !important;}.tg col {width: auto !important;}.tg-wrap {overflow-x: auto;-webkit-overflow-scrolling: touch;}}</style>
     <div class="tg-wrap"><table class="tg">
     <h5>Funding Allocation to Project Categories</h5>
-    <p>This table shows how revenue is allocated to different funding categories for both roadway and transit projects.</p>
+    <p>This table shows how revenue is allocated to different funding categories for both roadway and transit projects. <i> Revenues in billions of Y-O-E $. Figures may not add up due ro rounding. | Source: DVRPC, 2020.</i></p>
       <tr>
         <th class="tg-3ojx" rowspan="2"><br>Mode</th>
         <th class="tg-3ojx" rowspan="2"><br>Project Category</th>
@@ -212,14 +212,14 @@
         <td class="tg-lut6" rowspan="5"><br><br><br><br>Roadway</td>
         <td class="tg-yw4l"><B>System Preservation</B><br>- Pavement Preservation<br>- Bridge Preservation</td>
         <td class="tg-lqy6"><br>30.5%<br>50.0%</td>
-        <td class="tg-lqy6"><br>$ 7.5 B<br>$ 12.3 B</td>
+        <td class="tg-lqy6"><br>$ 7.9 B<br>$ 13.0 B</td>
         <td class="tg-lqy6"><br>48.5%<br>25.0%</td>
-        <td class="tg-lqy6"><br>$ 6.7 B<br>$ 3.4 B</td>
+        <td class="tg-lqy6"><br>$ 6.6 B<br>$ 3.4 B</td>
       </tr>
       <tr>
         <td class="tg-9hbo">Operational Improvements</td>
         <td class="tg-lqy6">11.75%</td>
-        <td class="tg-lqy6">$ 2.9 B</td>
+        <td class="tg-lqy6">$ 3.1 B</td>
         <td class="tg-lqy6">15.25%</td>
         <td class="tg-lqy6">$ 2.1 B</td>
       </tr>
@@ -247,17 +247,17 @@
       <tr>
         <td class="tg-yita" colspan="2">Roadway Subtotal</td>
         <td class="tg-c6ub">100%</td>
-        <td class="tg-c6ub">$ 24.7 B</td>
+        <td class="tg-c6ub">$ 26.0 B</td>
         <td class="tg-c6ub">100%</td>
-        <td class="tg-c6ub">$ 13.7 B</td>
+        <td class="tg-c6ub">$ 13.6 B</td>
       </tr>
       <tr>
         <td class="tg-sg9c" rowspan="4">Transit</td>
         <td class="tg-yw4l"><B>System Preservation</B><br>- Rail Infrastructure<br>- Vehicles<br>- Station Enhancements</td>
         <td class="tg-0ord"><br>14.0%<br>45.8%<br>10.9%</td>
-        <td class="tg-0ord"><br>$ 2.8 B<br>$ 9.0 B<br>$ 2.1 B</td>
+        <td class="tg-0ord"><br>$ 2.9 B<br>$ 9.4 B<br>$ 2.2 B</td>
         <td class="tg-0ord"><br>7.5%<br>34.3%<br>3.0%</td>
-        <td class="tg-0ord"><br>$ 0.5 B<br>$ 2.5 B<br>$ 0.2 B</td>
+        <td class="tg-0ord"><br>$ 0.5 B<br>$ 2.4 B<br>$ 0.2 B</td>
       </tr>
       <tr>
         <td class="tg-9hbo">Operational Improvements</td>
@@ -271,28 +271,28 @@
         <td class="tg-lqy6">3.6%</td>
         <td class="tg-lqy6">$ 0.7 B</td>
         <td class="tg-lqy6">35.7%</td>
-        <td class="tg-lqy6">$ 2.6 B</td>
+        <td class="tg-lqy6">$ 2.5 B</td>
       </tr>
       <tr>
         <td class="tg-9hbo">Other</td>
         <td class="tg-lqy6">22.2%</td>
-        <td class="tg-lqy6">$ 4.4 B</td>
+        <td class="tg-lqy6">$ 4.5 B</td>
         <td class="tg-lqy6">17.5%</td>
-        <td class="tg-lqy6">$ 1.3 B</td>
+        <td class="tg-lqy6">$ 1.2 B</td>
       </tr>
       <tr>
         <td class="tg-ef4r" colspan="2">Transit Subtotal</td>
         <td class="tg-pi3k">100%</td>
-        <td class="tg-pi3k">$ 19.7 B</td>
+        <td class="tg-pi3k">$ 20.5 B</td>
         <td class="tg-pi3k">100%</td>
-        <td class="tg-pi3k">$ 7.2 B</td>
+        <td class="tg-pi3k">$ 7.0 B</td>
       </tr>
       <tr>
         <td class="tg-47zg" colspan="2">Region Total</td>
         <td class="tg-l65r">100%</td>
-        <td class="tg-l65r">$ 44.4 B</td>
+        <td class="tg-l65r">$ 46.4 B</td>
         <td class="tg-l65r">100%</td>
-        <td class="tg-l65r">$ 20.9 B</td>
+        <td class="tg-l65r">$ 19.9 B</td>
       </tr>
     </table>
     </div>
