--- a/index.htm
+++ b/index.htm
@@ -145,12 +145,29 @@
             <!--home tab-->
                 <div id="home" class="tab-pane active in landing-content" style="color:#333333">    
                         <div class="col-md-5">
-                          <span ><h3><i>Connections 2045 Plan</i></h3><h5>Major Regional Projects</h5></span>
+                          <span ><h3><i>DRAFT Amended Connections 2045 Plan</i></h3><h5>Major Regional Projects</h5></span>
                             <div class="col-12 content">
-                                <p>The <i>Connections 2045 Plan</i> conducts a robust needs assessment for maintaining all existing road, bridge, and transit infrastructure. It also includes desired transportation investments to improve operational efficiency of existing facilities, and to expand roadway, transit, and bike and pedestrian infrastructure. The sum of all these needs is also know as the region's Vision Plan.
+                                <p>The <i>Connections 2045 Plan</i> conducts a robust needs assessment for maintaining all existing road, bridge, and transit infrastructure. It also includes desired transportation investments to improve operational efficiency of existing facilities, and to expand roadway, transit, and bike and pedestrian infrastructure. The sum of all these needs is also known as the region's Vision Plan.
                                 <div class="col-12 content"><img id="needs-graphic" src="lib/images/needs.png"/></div> 
 
-                               Federal requirements mandate that the Long-Range Plan be fiscally constrained and only include projects that can be funded with reasonably anticipated revenue sources. Due to the gap between future needs and anticipated funding, not all identified projects in the Vision Plan are able to be included in the fiscally constrained financial plan. The financial plan allocates revenue to different categories, and there are separate budgets for the Pennsylvania and New Jersey portions of the DVRPC region. These categories serve as placeholders for funding projects over the life of the Plan.</p>
+                               Federal requirements mandate that the Long-Range Plan be fiscally constrained and only include projects that can be funded with reasonably anticipated revenue sources. Due to the gap between future needs and anticipated funding, not all identified projects in the Vision Plan are able to be included in the fiscally constrained financial plan. The financial plan allocates revenue to different categories, and there are separate budgets for the Pennsylvania and New Jersey portions of the DVRPC region. These categories serve as placeholders for funding projects over the life of the Plan. The Connections 2045 Major Regional Project webmap accounts for changes to project scope, timing, cost, and inclusion in the fiscally-constrained plan as part of the Plan Amendment.</p>
+                               <b>Public Comment Period</b>
+                               <p>A public comment period is being held from May 26, 2020 to June 29, 2020 to accept infput on draft amended transportation amendments. The Amendment document can be found here. This version of the webmap contains projects with draft changes per this amendment, to compare with existing project costs and status see the Board-adopted webmap <a href="https://www.dvrpc.org/webmaps/MRP2045/#map" target="_new"> www.dvrpc.org/webmaps/MRP2045</a>.</br></br>
+
+                                Physical copies of the Connections 2045 Amendment are not available due to the COVID-19 related closures.The comment period will be advertised by legal notices in area newspapers, on the DVRPC web page, and via email to over 11,000 recipients on DVRPC’s distribution list. As part of the comment period a public information session will be held on June 17 from 4 to 6 pm via webinar. Comments may be submitted at the June 17 meeting, online on the DVRPC Long-Range Plan web page under Connections 2045 Amendment section or by:</br></br>
+                                Email:<a href="mailto:lrp@dvrpc.org">lrp@dvrpc.org</a> </br></br>
+                                Mail: Public Comments</br>
+                                c/o DVRPC Office of Communications and Engagement </br>
+                                190 N. Independence Mall West, 8th Fl.</br>
+                                Philadelphia, PA 19106-1520</br></br>
+
+                                Fax: 215-592-9125</br></br>
+
+                                Questions and comments must be submitted in writing. If you need assistance in providing a written comment, please contact the DVRPC Office of Communications and Engagement at 215-238-2929 or <a href="mailto:public_affairs@dvrpc.org">public_affairs@dvrpc.org</a>.</br></br>
+
+                                DVRPC must receive comments for the Draft LRP Amendment by 5:00 PM (local time) on June 29, 2020. Comments received via mail must be postmarked by June 29, 2020. Responses will not be provided unless comments are submitted in writing during the public comment period.  Submitted comments will be present to the DVRPC Board, and all comments and responses will be available at <a href="https://www.dvrpc.org/longrangeplan" target="_new">www.dvrpc.org/longrangeplan</a>.
+
+
                         <div class="col-md-6" style="margin-top: 15px;margin-bottom:15px;">
                             <div class="hp-tool-links">
                                  <a href="#map" data-toggle="tab" ><img  style="margin:25px 15px 0px 0px;float:left;width: 40px;" src="lib/images/mapicon.png"/></a>
@@ -195,7 +212,7 @@
     @media screen and (max-width: 767px) {.tg {width: auto !important;}.tg col {width: auto !important;}.tg-wrap {overflow-x: auto;-webkit-overflow-scrolling: touch;}}</style>
     <div class="tg-wrap"><table class="tg">
     <h5>Funding Allocation to Project Categories</h5>
-    <p>This table shows how revenue is allocated to different funding categories for both roadway and transit projects. <i> Revenues in billions of Y-O-E $. Figures may not add up due ro rounding. | Source: DVRPC, 2020.</i></p>
+    <p>This table shows how revenue is allocated to different funding categories for both roadway and transit projects. <i> Revenues in billions of Y-O-E $. Figures may not add up due to rounding. | Source: DVRPC, 2020.</i></p>
       <tr>
         <th class="tg-3ojx" rowspan="2"><br>Mode</th>
         <th class="tg-3ojx" rowspan="2"><br>Project Category</th>
@@ -312,18 +329,19 @@
                              
                                 <div class="well well-lg">
                                     <b>For more information about <i>Connections 2045</i> and DVRPC's LRP please contact:</b>
-                                        <p><b>Michael Boyer</b><br/>
-                                            Associate Director<br>
-                                            Office of Long-Range Planning and Economic Coordination<br/>
-                                            Phone: 215-238-2848 <br/>
-                                            <a href="mailto:mboyer@dvrpc.org">mboyer@dvrpc.org </a> 
-                                        </p>
                                         <p>
                                            <b>Brett Fusco</b><br/>
                                             Manager<br>
                                             Office of Long-Range Planning <br/>
                                             Phone: 215-238-2937 <br/>
                                             <a href="mailto:bfusco@dvrpc.org">bfusco@dvrpc.org </a> 
+                                        </p>
+                                        <p>
+                                            <b>Jaclyn Davis</b><br/>
+                                            Senior Planner<br>
+                                            Office of Long-Range Planning<br>
+                                            Phone: 215-238-2818<br>
+                                            <a href="mailto: jdavis@dvrpc.org"> jdavis@dvrpc.org </a>
                                         </p>
                                 </div>
                         </div> 
@@ -345,11 +363,12 @@
     <!--Map and Sidebar-->
        <div class="row ocontent mapUI" id="container">
             <div class="col-sm-4 col-lg-3" id="sidebar">
-				
-                <div class="tab-content" style="padding-top: 10px;">
+				<div class="tab-content">
+             <!--   <div class="tab-content" style="padding-top: 10px;"> -->
                         <!--ADD LAYER CONTROL GROUPS HERE -->
                         <!---Layer Group 1-->
                             <div class="panel-group legend">
+                            <span ><h4 style="margin-left:7px"><i>DRAFT Amended </i></h4></span>
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <a href="#map" data-toggle="modal" data-target="#modal_1"><div class="panelinfo group1_panel"></div></a>
