board approval changes
close #31

--- a/index.htm
+++ b/index.htm
@@ -8,8 +8,16 @@
         <meta name="description" content="version 1.0.0">
         <meta name="author" content="DVRPC">     
         <title>DVRPC - Connections 2045 Major Regional Projects</title>
-        <link href="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css" rel="stylesheet" type="text/css">
+        <!-- <link href="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
+
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
+
+       <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css" rel="stylesheet" type="text/css"> 
+ 
 
         <link href="lib/assets/typeahead.min.css" rel="stylesheet" type="text/css">
         <!-- Load Leaflet from CDN-->
@@ -145,28 +153,13 @@
             <!--home tab-->
                 <div id="home" class="tab-pane active in landing-content" style="color:#333333">    
                         <div class="col-md-5">
-                          <span ><h3><i>DRAFT Amended Connections 2045 Plan</i></h3><h5>Major Regional Projects</h5></span>
+                          <span ><h3><i>Amended Connections 2045 Plan</i></h3><h5>Major Regional Projects</h5></span>
                             <div class="col-12 content">
-                                <p>The <i>Connections 2045 Plan</i> conducts a robust needs assessment for maintaining all existing road, bridge, and transit infrastructure. It also includes desired transportation investments to improve operational efficiency of existing facilities, and to expand roadway, transit, and bike and pedestrian infrastructure. The sum of all these needs is also known as the region's Vision Plan.
+                                <p>The <i>Connections 2045 Plan</i> includes a robust needs assessment for maintaining all existing road, bridge, and transit infrastructure. It also lists desired transportation investments to improve operational efficiency of existing facilities, and to expand roadway, transit, and bike and pedestrian infrastructure. The sum of all these needs is referred to as the region's Vision Plan.
                                 <div class="col-12 content"><img id="needs-graphic" src="lib/images/needs.png"/></div> 
 
-                               Federal requirements mandate that the Long-Range Plan be fiscally constrained and only include projects that can be funded with reasonably anticipated revenue sources. Due to the gap between future needs and anticipated funding, not all identified projects in the Vision Plan are able to be included in the fiscally constrained financial plan. The financial plan allocates revenue to different categories, and there are separate budgets for the Pennsylvania and New Jersey portions of the DVRPC region. These categories serve as placeholders for funding projects over the life of the Plan. The Connections 2045 Major Regional Project webmap accounts for changes to project scope, timing, cost, and inclusion in the fiscally-constrained plan as part of the Plan Amendment.</p>
-                               <b>Public Comment Period</b>
-                               <p>A public comment period is being held from May 26, 2020 to June 29, 2020 to accept infput on draft amended transportation amendments. The Amendment document can be found <a href="https://www.dvrpc.org/longrangeplan" target="_new">here</a>. This version of the webmap contains projects with draft changes per this amendment, to compare with existing project costs and status see the Board-adopted webmap from December 2017: <a href="https://www.dvrpc.org/webmaps/MRP2045/#map" target="_new"> www.dvrpc.org/webmaps/MRP2045</a>.</br></br>
-
-                                Physical copies of the Connections 2045 Amendment are not available due to the COVID-19 related closures.The comment period will be advertised by legal notices in area newspapers, on the DVRPC web page, and via email to over 11,000 recipients on DVRPC’s distribution list. As part of the comment period a public information session will be held on June 17 from 4 to 6 pm via webinar. Comments may be submitted at the June 17 meeting, online on the DVRPC Long-Range Plan web page under Connections 2045 Amendment section or by:</br></br>
-                                Email: <a href="mailto:lrp@dvrpc.org">lrp@dvrpc.org</a> </br></br>
-                                Mail: Public Comments</br>
-                                c/o DVRPC Office of Communications and Engagement </br>
-                                190 N. Independence Mall West, 8th Fl.</br>
-                                Philadelphia, PA 19106-1520</br></br>
-
-                                Fax: 215-592-9125</br></br>
-
-                                Questions and comments must be submitted in writing. If you need assistance in providing a written comment, please contact the DVRPC Office of Communications and Engagement at 215-238-2929 or <a href="mailto:public_affairs@dvrpc.org">public_affairs@dvrpc.org</a>.</br></br>
-
-                                DVRPC must receive comments for the Draft LRP Amendment by 5:00 PM (local time) on June 29, 2020. Comments received via mail must be postmarked by June 29, 2020. Responses will not be provided unless comments are submitted in writing during the public comment period.  Submitted comments will be present to the DVRPC Board, and all comments and responses will be available at <a href="https://www.dvrpc.org/longrangeplan" target="_new">www.dvrpc.org/longrangeplan</a>.
-
+                               Federal requirements mandate that the Long-Range Plan be fiscally constrained and only include projects that can be funded with reasonably anticipated revenue sources. Due to the gap between future needs and anticipated funding, not all projects identified in the Vision Plan are able to be included in the fiscally constrained financial plan.</p>
+                               <p>The <i>Connections 2045</i> Major Regional Project table and webmap account for changes to project scope, timing, cost, and inclusion in the fiscally-constrained plan as part of the Plan Amendment. The Plan and Amendment are both available at <a href="//www.dvrpc.org/longrangeplan" target="_new"> www.dvrpc.org/longrangeplan</a>.
 
                         <div class="col-md-6" style="margin-top: 15px;margin-bottom:15px;">
                             <div class="hp-tool-links">
@@ -212,7 +205,7 @@
     @media screen and (max-width: 767px) {.tg {width: auto !important;}.tg col {width: auto !important;}.tg-wrap {overflow-x: auto;-webkit-overflow-scrolling: touch;}}</style>
     <div class="tg-wrap"><table class="tg">
     <h5>Funding Allocation to Project Categories</h5>
-    <p>This table shows how revenue is allocated to different funding categories for both roadway and transit projects. <i> Revenues in billions of Y-O-E $. Figures may not add up due to rounding. | Source: DVRPC, 2020.</i></p>
+    <p>The financial plan allocates revenue to different categories, using separate budgets for the Pennsylvania and New Jersey sub-regions. These categories serve as placeholders for funding projects over the life of the Plan.This table shows how revenue is allocated to different funding categories for both roadway and transit projects, and reflects the revenue forecast included in the Amended Plan. <i>Revenues in billions of Y-O-E $. Figures may not add up due to rounding. | Source: DVRPC, 2020.</i></p>
       <tr>
         <th class="tg-3ojx" rowspan="2"><br>Mode</th>
         <th class="tg-3ojx" rowspan="2"><br>Project Category</th>
@@ -368,7 +361,7 @@
                         <!--ADD LAYER CONTROL GROUPS HERE -->
                         <!---Layer Group 1-->
                             <div class="panel-group legend">
-                            <span ><h4 style="margin-left:7px"><i>DRAFT Amended </i></h4></span>
+                            <span ><h4 style="margin-left:7px"><i>Amended Major Regional Projects</i></h4></span>
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <a href="#map" data-toggle="modal" data-target="#modal_1"><div class="panelinfo group1_panel"></div></a>
@@ -644,18 +637,22 @@
             </div><!-- /.modal-dialog -->
     </div> 
 
-        <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+       <!--  <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script> -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
 
 
-        <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+        <!-- <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script> -->
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
         
         <script type="text/javascript" src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
 
         <script type="text/javascript" src="lib/core/dyna-icons.js"></script>
         <script type="text/javascript" src="lib/assets/typeahead.min.js"></script>
+
         <script type="text/javascript" src="lib/assets/numeral.min.js"></script>   
-        <script type="text/javascript" src="lib/assets/leaflet.label.js"></script>    
+      <script type="text/javascript" src="lib/assets/leaflet.label.js"></script>    
         <script type="text/javascript" src="lib/actions.js"></script><!--customized mapping functions to highlight map elements -->
         <script type="text/javascript" src="lib/map.js"></script><!--customized mapping functions to load data -->
         <script type="text/javascript" src="lib/table.js"></script><!--customized mapping functions to load data --> 
