--- a/index.htm
+++ b/index.htm
@@ -422,6 +422,25 @@
                                 </div>
                             </div>
                         </div>
+                             <!---Layer Group 4-->
+                       <div class="panel-group legend">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <a href="#map" data-toggle="modal" data-target="#modal_4" ><div class="panelinfo group4_panel"> </div></a>
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion_" href="#Group_4">
+                                    <div class="panellink group4_panel">
+                                        <span>Overlay Layers</span>
+                                    </div>
+                                </a>
+                                <a class="checked_all togglebox"></a>
+                            </div> 
+                            <div id="Group_4" class="panel-collapse collapse in">
+                                <div class="panel-body legPanel" style="padding: 0;">
+                                 <input type="checkbox" name="LayerCont" id="layer0" class="dyna layer" z-index="8">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                                <p><h5> <i>Some projects do not have geographic limits and cannot be mapped, for the full list of projects <br><a href="#page2" class="landingLink" data-tab="data" data-toggle="collapse" data-target=".navbar-collapse.in"><i class="glyphicon glyphicon-list-alt"></i> view the table.</i></a></h5></p>
                             <!---Legend-->
                        <div class="panel-group legend">
@@ -637,9 +656,28 @@
             </div><!-- /.modal-dialog -->
     </div> 
 
+         <!-- Layer Group 4 Modal Window -->
+         <div class="modal fade" id="modal_4">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title">Overlay Layers</h4>
+                    </div>
+                    <div class="modal-body">
+                         <p><img src="lib/images/sidebar/ext.png" class="modal_icon"/>Projects that do not receive any Federal funding. They are generally carried out by toll authorities. DVRPC coordinates with the sponsoring agency on these projects, and includes them in its air quality conformity analysis. </p>
+                    </div>
+                    <div class="modal-footer">
+                        
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div>
+
        <!--  <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script> -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
+        <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+       <!----> <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script> -->
 
 
         <!-- <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script> -->
