NJ Congress hover
NJ Congress hover

--- a/index.htm
+++ b/index.htm
@@ -429,7 +429,7 @@
                                 <a href="#map" data-toggle="modal" data-target="#modal_4" ><div class="panelinfo group4_panel"> </div></a>
                                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion_" href="#Group_4">
                                     <div class="panellink group4_panel">
-                                        <span>Overlay Layers</span>
+                                        <span>Congressional and State Legislative Districts</span>
                                     </div>
                                 </a>
                                 <a class="checked_all togglebox"></a>
