--- a/index.htm
+++ b/index.htm
@@ -109,6 +109,8 @@
                     display: none !important;
                 }
             } 
+            .info { padding: 6px 8px; font: 14px/16px Arial, Helvetica, sans-serif; background: white; background: rgba(255,255,255,0.8); box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 5px; } 
+        .info h4 { margin: 0 0 5px; color: #777; }
         </style> 
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
