--- a/index.htm
+++ b/index.htm
@@ -109,8 +109,6 @@
                     display: none !important;
                 }
             } 
-            .info { padding: 6px 8px; font: 14px/16px Arial, Helvetica, sans-serif; background: white; background: rgba(255,255,255,0.8); box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 5px; } 
-        .info h4 { margin: 0 0 5px; color: #777; }
         </style> 
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
@@ -361,7 +359,7 @@
 				<div class="tab-content">
              <!--   <div class="tab-content" style="padding-top: 10px;"> -->
                         <!--ADD LAYER CONTROL GROUPS HERE -->
-                        <!---Layer Group 1-->
+                <!---Layer Group 1-->
                             <div class="panel-group legend">
                             <span ><h4 style="margin-left:7px"><i>Amended Major Regional Projects</i></h4></span>
                             <div class="panel panel-default">
@@ -384,7 +382,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!---Layer Group 2-->
+            <!---Layer Group 2-->
                        <div class="panel-group legend">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
@@ -405,7 +403,7 @@
                                 </div>
                             </div>
                         </div>
-                           <!---Layer Group 3-->
+            <!---Layer Group 3-->
                        <div class="panel-group legend">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
@@ -424,8 +422,9 @@
                                 </div>
                             </div>
                         </div>
-                             <!---Layer Group 4-->
-                       <div class="panel-group legend">
+
+            <!---Layer Group 4-->
+                    <div class="panel-group legend">
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <a href="#map" data-toggle="modal" data-target="#modal_4" ><div class="panelinfo group4_panel"> </div></a>
@@ -440,11 +439,17 @@
                                 <div class="panel-body legPanel" style="padding: 0;">
                                  <input type="checkbox" name="LayerCont" id="layer0" class="dyna layer" z-index="8">
                                 </div>
+                                <div class="panel-body legPanel" style="padding: 0;">
+                                 <input type="checkbox" name="LayerCont" id="layer9" class="dyna layer" z-index="8">
+                                </div>
                             </div>
                         </div>
                     </div>
-                               <p><h5> <i>Some projects do not have geographic limits and cannot be mapped, for the full list of projects <br><a href="#page2" class="landingLink" data-tab="data" data-toggle="collapse" data-target=".navbar-collapse.in"><i class="glyphicon glyphicon-list-alt"></i> view the table.</i></a></h5></p>
-                            <!---Legend-->
+
+            <!---Footnote-->
+                   <p><h5> <i>Some projects do not have geographic limits and cannot be mapped, for the full list of projects <br><a href="#page2" class="landingLink" data-tab="data" data-toggle="collapse" data-target=".navbar-collapse.in"><i class="glyphicon glyphicon-list-alt"></i> view the table.</i></a></h5></p>
+
+            <!---Legend-->
                        <div class="panel-group legend">
                             <div class="panel panel-default" style="height:180px;background-color:#fff;"> 
                               <div class="panel-heading">
@@ -470,7 +475,8 @@
                         </div>
          
                 </div>
-            </div><!--Siderbar Close-->
+            </div>
+            <!--Siderbar Close-->
             <!---Map Pane -->
             <div class="col-sm-8 col-lg-9 mapUI" id="mapDIV" style="display:none;">
                 <div id="loading" style="display: block;">
@@ -658,16 +664,16 @@
             </div><!-- /.modal-dialog -->
     </div> 
 
-         <!-- Layer Group 4 Modal Window -->
+    <!-- Layer Group 4 Modal Window -->
          <div class="modal fade" id="modal_4">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title">Overlay Layers</h4>
+                        <h4 class="modal-title">Congressional and State Legislative Distrcits</h4>
                     </div>
                     <div class="modal-body">
-                         <p><img src="lib/images/sidebar/ext.png" class="modal_icon"/>Projects that do not receive any Federal funding. They are generally carried out by toll authorities. DVRPC coordinates with the sponsoring agency on these projects, and includes them in its air quality conformity analysis. </p>
+                    Various Political Boundaries for referecne.
                     </div>
                     <div class="modal-footer">
                         
